[tool.poetry]
name = "dorm"
version = "0.1.0"
description = "Dorm Server"
authors = ["Vladimir Zhukov <zhvv117@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
djangorestframework = "^3.10"
psycopg2 = "^2.8"
django-allauth = "^0.40.0"
Pillow = "^6.1"
django-crispy-forms = "^1.7"
flake8-django = "^0.0.4"
django-filter = "^2.2"
django-bootstrap-form = "^3.4"
gunicorn = "^19.9"
django-phonenumber-field = "^3.0"
phonenumbers = "^8.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
